--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		  </canvas>
 		
 	    <footer>
-		    Made by Tania Padilla with JavaScript, 2024
+		    Made by manu torres with JavaScript, 2024
 	    </footer>
     
 	</body>
